--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ header #logo {
 
 header #logo img {
     width: 30%;
+    border: medium solid transparent;
+}
+
+header #logo img:hover {
+    border: medium solid rgba(255, 255, 255, 0.75);
+    transition-duration: 0.5s;
 }
 
 header #others {
@@ -137,4 +143,187 @@ footer a:hover {
     margin: auto;
     font-size: large;
     font-family: 'Times New Roman', Times, serif;
+}
+
+/* About Page Styling */
+
+#bio {
+    display: block;
+    width: 40%;
+    margin: 1% 30%;
+}
+
+#bio article {
+    background-color: gray;
+    border: ghostwhite;
+    color: white;
+    text-align: center;
+}
+
+#bio article img {
+    width: 80%;
+    text-align: center;
+}
+
+#bio article h5 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
+    font-weight: bold;
+    padding: 1em;
+}
+
+#info {
+    width: 70%;
+    margin: auto;
+    background-color: darkslategray;
+    border: medium dashed white;
+    color: white;
+    padding: 1em;
+}
+
+#info p {
+    width: 80%;
+    margin: auto;
+    font-size: x-large;
+    font-family: 'Micro 5', sans-serif;
+}
+
+#info #fav {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    gap: 1% 5%;
+    text-transform: capitalize;
+}
+
+#info article {
+    width: 30%;
+}
+
+/* Works Page Styling */
+
+#imgs {
+    width: 80%;
+    margin: 1% 10%;
+    display: flex;
+    flex-direction: row;
+    align-content: stretch;
+    gap: 1% 2%;
+}
+
+#imgs article {
+    width: 20%;
+    text-align: center;
+    background-color: darkgray;
+    border: thin dashed darkslategray;
+    padding: 1em;
+}
+
+#imgs article img {
+    width: 90%;
+}
+
+#imgs article h3 {
+    text-transform: capitalize;
+    font-family: 'Jacquarda Bastarda 9', sans-serif;
+}
+
+#imgs article p {
+    text-transform: capitalize;
+    font-family: 'micro 5', sans-serif;
+    font-size: larger;
+}
+
+/* Interests Page Styling */
+
+#fav article h2 {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#fav article dl dt, ol {
+    font-size: larger;
+    font-family: 'Jacquarda Bastarda 9', sans-serif;
+}
+
+#fav article dl dd{
+    font-size: large;
+    font-family: 'Micro 5', sans-serif;
+}
+
+#gems {
+    list-style-type: none;
+}
+#azure {
+    color: azure;
+}
+#pearl {
+    color: #E2DFD2;
+}
+#barite {
+    color: #cecdc6;
+}
+#garnet {
+    color: #9A2A2A;
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 40%;
+}
+#ruby{
+    color: #E0115F;
+}
+#citrine {
+    color: #E4D00A;
+}
+#gold {
+    color: gold;
+}
+#topaz {
+    color: #FFC067;
+}
+#peridot {
+    color: #B4C424;
+}
+#emerald {
+    color: #50c878;
+}
+#alexandrite {
+    color: #60907A;
+    background-color: rgba(255, 255, 255, 0.75);
+    width: 70%;
+}
+#aquamarine {
+    color: aquamarine;
+}
+#turquoise {
+    color: turquoise;
+}
+#bloodstone {
+    color: #00928A;
+    background-color: rgba(255, 255, 255, 0.75);
+    width: 60%;
+}
+#diamond {
+    color: #b9f2ff;
+}
+#sapphire {
+    color: #0f52ba;
+    background-color: rgba(255, 255, 255, 0.50);
+    width: 50%;
+}
+#tanzanite {
+    color: #8551ff;
+    background-color: rgba(255, 255, 255, 0.50);
+    width: 60%;
+}
+#amethyst {
+    color: #9966cc;
+    background-color: rgba(255, 255, 255, 0.50);
+    width: 55%;
+}
+
+#fav ul {
+    font-family: 'Micro 5', sans-serif;
+    font-size: x-large;
+    font-weight: bold;
+    list-style-type: lower-greek;
 }
