--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ footer a:hover {
 
 #imgs article:hover {
     background-color: transparent;
-    color: lime;
+    color: ghostwhite;
     border: thin solid transparent;
     transition-duration: 0.25s;
 }
