--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ footer a:hover {
 #view article:hover {
     background-color: transparent;
     border: thick dashed transparent;
-    color: lime;
+    color: ghostwhite;
     opacity: 75%;
     transition-duration: 0.5s;
 }
