--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /* Average Page Layout */
 
 html {
-    background-color: cornflowerblue;
+    background-color: ghostwhite;
 }
 
 body {
-    background-color: #3e3e42;
-    width: 96%;
+    background-color: #2b2b2c;
+    width: 99%;
     margin: auto;
 }
 
@@ -56,11 +56,12 @@ header #others:hover {
 }
 
 footer {
-    background-color: crimson;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
     text-align: center;
     width: 45%;
-    margin: 1em 27.5%;
-    border: 0.5em solid blue;
+    margin: 1% 27.5%;
+    padding: 1em;
 }
 
 footer a {
@@ -68,17 +69,6 @@ footer a {
     font-weight: 600;
     font-size: larger;
     color: white;
-}
-
-footer:hover {
-    background-color: lightcoral;
-    border: 0.5em solid skyblue;
-    transition-duration: 1s;
-}
-
-footer a:hover {
-    color: black;
-    transition-duration: 0.5s;
 }
 
 /* Home Page Styling */
